# AI_helper

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  temp.py
alembic/: env.py
alembic/versions/: 12bce08cf866_add_study_tools_analysis_tables.py  182cfc8ea7ba_fix_exam_questions_type_to_jsonb.py  29bf2c878334_add_chat_history_table.py  51ff46e87034_fixed_analysis_schema.py  7ab0a48f2136_add_study_tools_analysis_tablessa.py  b1defeeb0087_add_tsvector_for_hybrid_search.py  b2b5042da4c3_initial_schema.py  c40fb840bfdb_add_chat_history_table.py  dd084c819a80_add_study_tools_analysis_tables.py  ff2992274769_real_init.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  chat.py  documents.py  projects.py  study.py
app/core/: config.py  db.py  prompts.py  security.py
app/crud/: chat.py  document.py  project.py
app/models/: __init__.py  analysis.py  chat.py  document.py  project.py  user.py
app/schemas/: chat.py  document.py  project.py  study.py  user.py
app/services/: auth_service.py  chat_service.py  pdf_service.py  rag_service.py  study_service.py
app/utils/: file_storage.py
